--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,10 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '13.0'
 
 target 'Learn_Combine_Example' do
   pod 'Learn_Combine', :path => '../'
+  pod 'CocoaLumberjack'
 
   target 'Learn_Combine_Tests' do
     inherit! :search_paths
